--- a/index.html
+++ b/index.html
@@ -2,10 +2,46 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
-        <title>Page title</title> 
+        <title>Lenni Art</title> 
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
     </head>
-    <body>
-        <h1>Заголовок страницы</h1>
-        <br>
-        <p title="Подсказка">Параграф текста</p>
+    <body class="body">
+        <header class="header">
+            <div class="header__container">
+                <a href="index.html" class="header__logo">
+                    <img src="assets/logo.svg" class="header__logo-img">
+                </a>
+                <nav class="header__nav">
+                    <a href="#" class="header__nav-link">Мероприятия</a>
+                    <a href="#" class="header__nav-link">Блог</a>
+                    <a href="#" class="header__nav-link">О нас</a>
+                    <a href="#" class="header__nav-link">Контакты</a>
+                </nav>
+                <a href="#" class="button header__user-button">Войти</a>
+            </div>
+        </header>
+        <main class="main">
+            <div class="home">
+                <header class="main-header home__main-header">
+                    <h1 class="main-header__title">Арт-пространство</h1>
+                    <picture class="main-header__lenni">
+                        <img src="assets/main-lenni.svg" class="main-header__lenni-img">
+                    </picture>
+                    <p class="main-header__text">Для людей, горящих сердцЕМ и делом
+                        место для настоящего</p>
+                </header>
+                <section class="offers home__offers"></section>
+                <section class="abount home__about"></section>
+                <section class="events home__events"></section>
+                <section class="blog home__blog"></section>
+                <section class="contacts home__contacts"></section>
+                <div class="doit home__doit"></div>
+
+            </div>
+        </main>
+        <footer class="footer"></footer>
     </body>
+</html>
