--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
                     <img src="assets/logo.svg" class="header__logo-img">
                 </a>
                 <nav class="header__nav">
-                    <a href="#" class="header__nav-link">Мероприятия</a>
+                    <a href="events.html" class="header__nav-link">Мероприятия</a>
                     <a href="#" class="header__nav-link">Блог</a>
                     <a href="#" class="header__nav-link">О нас</a>
                     <a href="#" class="header__nav-link">Контакты</a>
                 </nav>
-                <a href="#" class="button header__user-button">Войти</a>
+                <div class="header__sign_in-box">
+                    <a href="#" class="button header__user-button">Войти</a>
+                </div>
+                
             </div>
         </header>
         <main class="main">
