--- a/event_detail.html
+++ b/event_detail.html
@@ -27,23 +27,29 @@
             </div>
         </header>
         <main class="main">
-            <div class="home">
-                <header class="main-header home__main-header">
-                    <h1 class="main-header__title">Арт-пространство</h1>
-                    <picture class="main-header__lenni">
-                        <img src="assets/main-lenni.svg" class="main-header__lenni-img">
-                    </picture>
-                    <p class="main-header__text">Для людей, горящих сердцЕМ и делом
-                        место для настоящего</p>
-                </header>
-                <section class="offers home__offers"></section>
-                <section class="abount home__about"></section>
-                <section class="events home__events"></section>
-                <section class="blog home__blog"></section>
-                <section class="contacts home__contacts"></section>
-                <div class="doit home__doit"></div>
 
+            <div class="main-header">
+                <h1 class="header-event__title"></h1>
+
+                <div class="header-cover"></div>
             </div>
+
+            <article class="event">
+                <form class="reserve event__reserve">
+                  <div class="reserve__checks">
+                    Чекбоксы
+                  </div>
+                  <div class="reserve__scheme">
+                    Схема столов
+                  </div>
+                  <div class="reserve__order">
+                    Оформление заказа
+                  </div>
+                  <div class="reserve__legend">
+                    Легенда
+                  </div>
+                </form>
+            </article>
         </main>
         <footer class="footer"></footer>
     </body>
