--- a/events.html
+++ b/events.html
@@ -15,7 +15,7 @@
                     <img src="assets/logo.svg" class="header__logo-img">
                 </a>
                 <nav class="header__nav">
-                    <a href="#" class="header__nav-link">Мероприятия</a>
+                    <a href="events.html" class="header__nav-link">Мероприятия</a>
                     <a href="#" class="header__nav-link">Блог</a>
                     <a href="#" class="header__nav-link">О нас</a>
                     <a href="#" class="header__nav-link">Контакты</a>
@@ -32,7 +32,7 @@
                 <h2 class="events__title title">Мероприятия</h2>
                 <div class="events__list listing">
                     <article class="listing__card-event card-event">
-                        <a href="" class="card-event__link">
+                        <a href="event_detail.html" class="card-event__link">
                             <picture class="card-event__picture">
                                 <img src="assets/Nirvanna.jpg" calss="card-event__picture-img" alt="img"/>
                             </picture>
@@ -43,7 +43,7 @@
                     </article>
 
                     <article class="listing__card-event card-event">
-                        <a href="" class="card-event__link">
+                        <a href="event_detail.html" class="card-event__link">
                             <picture class="card-event__picture">
                                 <img src="assets/Nirvanna.jpg" calss="card-event__picture-img" alt="img"/>
                             </picture>
@@ -53,7 +53,7 @@
                         </a>
                     </article>
                     <article class="listing__card-event card-event">
-                        <a href="" class="card-event__link">
+                        <a href="event_detail.html" class="card-event__link">
                             <picture class="card-event__picture">
                                 <img src="assets/Nirvanna.jpg" calss="card-event__picture-img" alt="img"/>
                             </picture>
@@ -63,7 +63,7 @@
                         </a>
                     </article>
                     <article class="listing__card-event card-event">
-                        <a href="" class="card-event__link">
+                        <a href="event_detail.html" class="card-event__link">
                             <picture class="card-event__picture">
                                 <img src="assets/Nirvanna.jpg" calss="card-event__picture-img" alt="img"/>
                             </picture>
@@ -73,7 +73,7 @@
                         </a>
                     </article>
                     <article class="listing__card-event card-event">
-                        <a href="" class="card-event__link">
+                        <a href="event_detail.html" class="card-event__link">
                             <picture class="card-event__picture">
                                 <img src="assets/Nirvanna.jpg" calss="card-event__picture-img" alt="img"/>
                             </picture>
